# cinema

./: .gitignore  .pre-commit-config.yaml  Makefile  k8s.txt  package.json  pnpm-lock.yaml  pyproject.toml  skaffold.env  skaffold.yaml
backend/: Dockerfile  pyproject.toml
backend/src/: api.py
chart/: Chart.yaml
chart/templates/: backend-deployment.yaml  backend-service.yaml  database-deployment.yaml  database-service.yaml  frontend-deployment.yaml  frontend-service.yaml  ingress.yaml  loaders-deployment.yaml  maps-api-key-secret.yaml  pgdata-persistentvolumeclaim.yaml  postgres-password-secret.yaml
database/: Dockerfile
frontend/: Dockerfile  package.json  pnpm-lock.yaml  tsconfig.json  webpack.config.js
frontend/src/: index.css  index.html  index.ts
loaders/: Dockerfile  pyproject.toml
loaders/loaders/: athinorama.py  bs4.py  cinobo.py  create.py  foo.py  imdb.py  letterboxd.py  maps.py
loaders/test/assets/: 20240414170401.html  20240415161712.html  20240520224410.html
orm/: Dockerfile  pyproject.toml
orm/orm/: models.py
