[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "3.13.1"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pre-commit = "3.6.2"

[tool.mypy]
strict = false
ignore_missing_imports = true

[tool.ruff]
preview = true
target-version = "py312"

[tool.ruff.format]
skip-magic-trailing-comma = true

[tool.ruff.lint]
ignore = ["COM812", "CPY", "D"]
select = ["ALL"]
