[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
beautifulsoup4 = { version = "4.12.3", extras = ["lxml"] }
cinemagoer = "2023.5.1"
geopy = "2.4.1"
googlemaps = "4.10.0"
nltk = "3.8.1"
orm = { path = "../orm", develop = true }
python = "3.13.1"
requests = "2.32.3"

[tool.poetry.group.dev.dependencies]
pytest = "8.3.2"
types-requests = "2.32.0.20240712"
types-beautifulsoup4 = "4.12.0.20240511"

